--- a/style.css
+++ b/style.css
@@ -25,59 +25,6 @@ nav a {
   border-bottom: 2px solid transparent;
 }
 
-nav a:hover,
-nav a.active {
-  border-bottom: 2px solid #0cc0df;
-}
-
-.hero-carousel {
-  position: relative;
-  width: 100%;
-  height: 500px;
-  overflow: hidden;
-}
-
-.carousel-container {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-
-.carousel-slide {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  opacity: 0;
-  transition: opacity 1s ease-in-out;
-}
-
-.carousel-slide.active {
-  opacity: 1;
-  z-index: 1;
-}
-
-.carousel-btn {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background-color: rgba(0,0,0,0.5);
-  color: #fff;
-  font-size: 2rem;
-  border: none;
-  padding: 0.5rem 1rem;
-  cursor: pointer;
-  z-index: 2;
-}
-
-.carousel-btn.prev {
-  left: 20px;
-}
-
-.carousel-btn.next {
-  right: 20px;
-}
-
 .services {
   padding: 40px 20px;
   background-color: #111;
@@ -131,9 +78,12 @@ iframe {
 }
 
 .servicos-titulo {
-  text-align: center;
+  background-color: #000000;
+  color: #ffffff;
   font-size: 2.5rem;
-  margin-bottom: 40px;
+  text-align: center;
+  padding: 20px;
+  border-radius: 10px;
 }
 
 .categoria-servico {
@@ -199,3 +149,77 @@ iframe {
 .card-servico a:hover {
   background-color: #a50e25;
 }
+
+.sobre {
+  background-color: #1b1b1b; /* preto do topo */
+  padding: 60px 20px;
+  color: #fff;
+}
+
+.sobre h2 {
+  background-color: #000000;
+  color: #ffffff;
+  font-size: 2.5rem;
+  text-align: center;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.sobre-conteudo {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  background-color: #b1aeae76;
+  color: #ffffff;
+  border-radius: 12px;
+  padding: 40px;
+  gap: 40px;
+  max-width: 1200px;
+  margin: 0 auto;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+}
+
+.sobre-texto {
+  flex: 1 1 500px;
+  border-left: 5px solid #0cc0df; /* linha azul do site */
+  padding-left: 20px;
+  text-align: left;
+  font-size: 1rem;
+  line-height: 1.6;
+}
+
+.sobre-imagem {
+  flex: 1 1 400px;
+  text-align: center;
+}
+
+.sobre-imagem img {
+  width: 100%;
+  max-width: 400px;
+  border-radius: 12px;
+  object-fit: cover;
+}
+
+.carousel-container {
+  border: 4px solid #000000;  /* Azul do seu site */
+  padding: 5px;              /* Espaço interno entre vídeo e borda */
+  border-radius: 10px;        /* Cantos arredondados (opcional) */
+  background-color: #ffffff;  /* Fundo branco opcional (destaca o vídeo) */
+  max-width: 90%;
+  margin: 0 auto;             /* Centraliza horizontalmente */
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);  /* Sombra leve */
+}
+
+.carousel-slide {
+  width: 100%;
+  height: auto;
+  border-radius: 6px;         /* Bordas arredondadas do vídeo */
+}
+
+.contact {
+  padding: 60px 20px;
+  background-color: #000000;
+  color: #fff;
+  text-align: center;
+}
+
